[metadata]
name = dynoscale
version = 0.0.1
author = Ondrej Dolejsi
author_email = ondrej.dolejsi@gmail.com
description = A simple yet efficient scaling agent for Python apps on Heroku
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fuho/dynoscale-python
project_urls =
    Bug Tracker = https://github.com/fuho/dynoscale-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src